fix nav display on tablets

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -49,7 +49,7 @@
   @include mixins.mq(tablet) {
     display: flex;
     align-items: center;
-    gap: 4rem;
+    gap: 2rem;
     margin: 0 auto;
   }
 
